# controller/userctr/user.go
@@ -11,17 +11,27 @@ var Home HomeCtr
 
 type HomeCtr struct{}
 
+// @Tags        用户-首页
+// @Summary     商品列表
+// @Description 首页核心接口，展示商品列表
+// @Accept      json
+// @Produce     json
+// @Param       param       body     usermod.HomeListRequest                              true "参数"
+// @Param       xx_merchant path     string                                               true "Merchant Name"
+// @Success     200         {object} response.HTTPResponse{Data=usermod.HomeListResponse} "成功"
+// @Failure     500         {object} response.HTTPResponse                                "请求失败"
+// @Router      /v1/user/home/list/{xx_merchant} [post]
 func (HomeCtr) List(c context.UserContext) {
 	var r usermod.HomeListRequest
 	err := c.Gin().ShouldBindJSON(&r)
 	if err != nil {
-		response.Failed(c.Gin(), err)
+		response.InvalidParam(c.Gin()).Failed(err)
 		return
 	}
 
 	resp, err := userser.Home.List(c, r)
 	if err != nil {
-		response.Failed(c.Gin(), err)
+		response.InternalServerError(c.Gin()).Failed(err)
 		return
 	}
 
@@ -31,13 +41,13 @@ func (HomeCtr) List(c context.UserContext) {
 func (HomeCtr) Search(c context.UserContext) {
 	var r usermod.HomeSearchRequest
 	if err := c.Gin().ShouldBindJSON(&r); err != nil {
-		response.Failed(c.Gin(), err)
+		response.InvalidParam(c.Gin()).Failed(err)
 		return
 	}
 
 	resp, err := userser.Home.Search(c, r)
 	if err != nil {
-		response.Failed(c.Gin(), err)
+		response.InternalServerError(c.Gin()).Failed(err)
 		return
 	}
 
@@ -47,13 +57,13 @@ func (HomeCtr) Search(c context.UserContext) {
 func (HomeCtr) OrderInfo(c context.UserContext) {
 	var r usermod.OrderInfoRequest
 	if err := c.Gin().ShouldBindJSON(&r); err != nil {
-		response.Failed(c.Gin(), err)
+		response.InvalidParam(c.Gin()).Failed(err)
 		return
 	}
 
 	resp, err := userser.Order.Info(c, r)
 	if err != nil {
-		response.Failed(c.Gin(), err)
+		response.InternalServerError(c.Gin()).Failed(err)
 		return
 	}
 
@@ -63,13 +73,13 @@ func (HomeCtr) OrderInfo(c context.UserContext) {
 func (HomeCtr) SubmitOrder(c context.UserContext) {
 	var r usermod.SubmitOrderRequest
 	if err := c.Gin().ShouldBindJSON(&r); err != nil {
-		response.Failed(c.Gin(), err)
+		response.InvalidParam(c.Gin()).Failed(err)
 		return
 	}
 
 	resp, err := userser.Order.Submit(c, r)
 	if err != nil {
-		response.Failed(c.Gin(), err)
+		response.InternalServerError(c.Gin()).Failed(err)
 		return
 	}
 
